alertmanager/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/instance: alertmanager
    app: alertmanager
  name: alertmanager
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.k8sbox.lol
    http:
      paths:
      - backend:
          service:
            name: alertmanager
            port:
              number: 9093
        path: /
        pathType: Prefix
